<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <ImageView
        android:id="@+id/cross_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_action_share"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_detail"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="5dp"
                app:contentPadding="5dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="6dp"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/temple_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/temple_name"
                    android:imeOptions="actionNext"
                    android:maxLength="150"/>
            </com.google.android.material.textfield.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/temple_city_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:hint="@string/temple_city"
                            android:maxLength="80"/>
                    </android.support.design.widget.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/temple_address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/temple_address"
                        android:imeOptions="actionNext"
                        android:maxLength="180"/>
                </com.google.android.material.textfield.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/temple_contact_no_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/temple_contact_no"
                            android:imeOptions="actionDone"
                            android:maxLength="11"
                            android:inputType="phone"/>
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/submit_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/submit"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/button_drawable"
                        android:textSize="14sp"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"/>
                        <Button
                            android:id="@+id/cancel_bt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/cancel"
                           android:layout_alignParentRight="true"
                            android:textSize="14sp"
                            android:paddingLeft="25dp"
                            android:paddingRight="25dp"
                            android:background="@drawable/button_drawable_cancel"/>

                    </RelativeLayout>
</LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>