<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whole_bg"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bg">


            <ImageView
                android:id="@+id/previousMonthBt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_chevron_left_black_24dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border_bg"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/hindiMonthStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="afafaf"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/monthName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Janjary"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hindiMonthEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right"
                android:text="afafaf"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bg">


            <ImageView
                android:id="@+id/next_month_bt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_chevron_right_black_24dp" />
        </FrameLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vikram_sarvat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="afafaf"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/veer_sarvat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="right"
            android:text="afafaf"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:text="@string/sunday_h"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:text="@string/monday_h"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:text="@string/tuesday_h"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:text="@string/wednesday_h"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:text="@string/thursday_h"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:text="@string/friday_h"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:text="@string/saturday_h"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendat_recy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>
       <!-- <android.support.v4.view.ViewPager
            android:id="@+id/calViewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"/>-->


<!--
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            app:adSize="BANNER"
            app:adUnitId="@string/bannser_ad"></com.google.android.gms.ads.AdView-->>
    </RelativeLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/calander_update_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/calender_not_udpated"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="gone"/>



</LinearLayout>